[gd_scene load_steps=14 format=2]

[ext_resource path="res://scene/maincontrol/SceneManager.gd" type="Script" id=1]
[ext_resource path="res://font/Roboto-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://DefaultTheme.tres" type="Theme" id=3]
[ext_resource path="res://font/DefaultFont.tres" type="DynamicFont" id=4]
[ext_resource path="res://placeholder.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 22
use_mipmaps = true
use_filter = true
extra_spacing_top = 2
extra_spacing_bottom = 2
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 14
use_mipmaps = true
use_filter = true
extra_spacing_top = 3
extra_spacing_bottom = 3
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 22
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 20
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=9]
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[node name="MainControl" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SceneManager" type="Node" parent="."]
script = ExtResource( 1 )
modDisplayPath = NodePath("../ModDisplay")
codeInputPath = NodePath("../ModDisplay/GeneralContainer/ProfileCodeContainer/VBoxContainer/CodeInput")
responsePath = NodePath("../ModDisplay/GeneralContainer/ProfileCodeContainer/Response")
confirmPath = NodePath("../ModDisplay/GeneralContainer/ProfileCodeContainer/CenterContainer/Confirm")
modExportPath = NodePath("../ModDisplay/GeneralContainer/ModpackExportContainer")
changePath = NodePath("../ModDisplay/GeneralContainer/ProfileCodeContainer/CenterContainer/Change")
gridPath = NodePath("../ModDisplay/GeneralContainer/ModpackExportContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/ModsContainer/ScrollContainer/GridContainer")
scrollPath = NodePath("../ModDisplay/GeneralContainer/ModpackExportContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/ModsContainer/ScrollContainer")
editPopupPath = NodePath("../ConfirmDialog")
modpackNameEditPath = NodePath("../ConfirmDialog/VBoxContainer/ModpackNameEdit")
websiteEditPath = NodePath("../ConfirmDialog/VBoxContainer/WebsiteEdit")
descriptionEditPath = NodePath("../ConfirmDialog/VBoxContainer/DescriptionEdit")
majorPath = NodePath("../ConfirmDialog/VBoxContainer/HBoxContainer/MajorEdit")
minorPath = NodePath("../ConfirmDialog/VBoxContainer/HBoxContainer/MinorEdit")
patchPath = NodePath("../ConfirmDialog/VBoxContainer/HBoxContainer/PatchEdit")
modpackNamePath = NodePath("../ModDisplay/GeneralContainer/ModpackExportContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/ModpackNameContainer/HBoxContainer/VBoxContainer/HBoxContainer/ModpackName")
websitePath = NodePath("../ModDisplay/GeneralContainer/ModpackExportContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/ModpackNameContainer/HBoxContainer/VBoxContainer/Website")
descriptionPath = NodePath("../ModDisplay/GeneralContainer/ModpackExportContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/ModpackNameContainer/HBoxContainer/VBoxContainer/Description")
versionPath = NodePath("../ModDisplay/GeneralContainer/ModpackExportContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/ModpackNameContainer/HBoxContainer/VBoxContainer/HBoxContainer/Version")

[node name="HTTPRequest" type="HTTPRequest" parent="SceneManager"]

[node name="Timer" type="Timer" parent="SceneManager"]

[node name="Tween" type="Tween" parent="SceneManager"]

[node name="ModDisplay" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="ModDisplay"]
anchor_right = 1.0
anchor_bottom = 1.0
ratio = 2.0
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="ModDisplay/AspectRatioContainer"]
margin_left = -88.0
margin_right = 1112.0
margin_bottom = 600.0
color = Color( 0.054902, 0.0509804, 0.0509804, 0.819608 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GeneralContainer" type="VBoxContainer" parent="ModDisplay"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProfileCodeContainer" type="VBoxContainer" parent="ModDisplay/GeneralContainer"]
margin_top = 200.0
margin_right = 1024.0
margin_bottom = 400.0
rect_min_size = Vector2( 300, 200 )
alignment = 1

[node name="InputDetails" type="Label" parent="ModDisplay/GeneralContainer/ProfileCodeContainer"]
margin_top = 52.0
margin_right = 1024.0
margin_bottom = 81.0
custom_fonts/font = ExtResource( 4 )
text = "INSERT PROFILE CODE:"
align = 1

[node name="VBoxContainer" type="CenterContainer" parent="ModDisplay/GeneralContainer/ProfileCodeContainer"]
margin_top = 85.0
margin_right = 1024.0
margin_bottom = 116.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CodeInput" type="LineEdit" parent="ModDisplay/GeneralContainer/ProfileCodeContainer/VBoxContainer"]
margin_left = 303.0
margin_right = 721.0
margin_bottom = 31.0
custom_constants/minimum_spaces = 83
custom_fonts/font = SubResource( 1 )
align = 1
placeholder_text = "..."
placeholder_alpha = 0.278
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Response" type="Label" parent="ModDisplay/GeneralContainer/ProfileCodeContainer"]
visible = false
margin_top = 106.0
margin_right = 418.0
margin_bottom = 129.0
custom_fonts/font = SubResource( 2 )
align = 1

[node name="CenterContainer" type="CenterContainer" parent="ModDisplay/GeneralContainer/ProfileCodeContainer"]
margin_top = 120.0
margin_right = 1024.0
margin_bottom = 148.0

[node name="Confirm" type="Button" parent="ModDisplay/GeneralContainer/ProfileCodeContainer/CenterContainer"]
margin_left = 467.0
margin_right = 557.0
margin_bottom = 28.0
text = "CONFIRM"

[node name="Change" type="Button" parent="ModDisplay/GeneralContainer/ProfileCodeContainer/CenterContainer"]
visible = false
margin_left = 470.0
margin_right = 553.0
margin_bottom = 28.0
text = "CHANGE"

[node name="ModpackExportContainer" type="MarginContainer" parent="ModDisplay/GeneralContainer"]
visible = false
margin_top = 204.0
margin_right = 1024.0
margin_bottom = 614.0
custom_constants/margin_right = 25
custom_constants/margin_top = -45
custom_constants/margin_left = 25
custom_constants/margin_bottom = 35

[node name="VBoxContainer" type="VBoxContainer" parent="ModDisplay/GeneralContainer/ModpackExportContainer"]
margin_left = 25.0
margin_top = -45.0
margin_right = 999.0
margin_bottom = 375.0
custom_constants/separation = 12

[node name="PanelContainer" type="PanelContainer" parent="ModDisplay/GeneralContainer/ModpackExportContainer/VBoxContainer"]
margin_right = 974.0
margin_bottom = 357.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="ModDisplay/GeneralContainer/ModpackExportContainer/VBoxContainer/PanelContainer"]
margin_right = 974.0
margin_bottom = 357.0
custom_constants/margin_right = 15
custom_constants/margin_top = 15
custom_constants/margin_left = 15
custom_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="ModDisplay/GeneralContainer/ModpackExportContainer/VBoxContainer/PanelContainer/MarginContainer"]
margin_left = 15.0
margin_top = 15.0
margin_right = 959.0
margin_bottom = 342.0
custom_constants/separation = 15

[node name="LabelContainer" type="CenterContainer" parent="ModDisplay/GeneralContainer/ModpackExportContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_right = 944.0
margin_bottom = 27.0

[node name="Label" type="Label" parent="ModDisplay/GeneralContainer/ModpackExportContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/LabelContainer"]
margin_left = 339.0
margin_right = 604.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 4 )
text = "IMPORTED PROFILE MODS"

[node name="ModpackNameContainer" type="CenterContainer" parent="ModDisplay/GeneralContainer/ModpackExportContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 42.0
margin_right = 944.0
margin_bottom = 112.0

[node name="HBoxContainer" type="HBoxContainer" parent="ModDisplay/GeneralContainer/ModpackExportContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/ModpackNameContainer"]
margin_left = 252.0
margin_right = 691.0
margin_bottom = 70.0

[node name="CenterContainer2" type="CenterContainer" parent="ModDisplay/GeneralContainer/ModpackExportContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/ModpackNameContainer/HBoxContainer"]
margin_bottom = 70.0

[node name="MarginContainer" type="ReferenceRect" parent="ModDisplay/GeneralContainer/ModpackExportContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/ModpackNameContainer/HBoxContainer/CenterContainer2"]
visible = false
margin_left = -32.0
margin_top = 19.0
margin_right = 32.0
margin_bottom = 51.0
rect_min_size = Vector2( 64, 32 )
border_width = 3.0

[node name="TextureRect" type="TextureRect" parent="ModDisplay/GeneralContainer/ModpackExportContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/ModpackNameContainer/HBoxContainer/CenterContainer2/MarginContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 64, 64 )
texture = ExtResource( 5 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ModDisplay/GeneralContainer/ModpackExportContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/ModpackNameContainer/HBoxContainer"]
margin_left = 4.0
margin_right = 386.0
margin_bottom = 70.0

[node name="HBoxContainer" type="HBoxContainer" parent="ModDisplay/GeneralContainer/ModpackExportContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/ModpackNameContainer/HBoxContainer/VBoxContainer"]
margin_right = 382.0
margin_bottom = 24.0

[node name="ModpackName" type="LineEdit" parent="ModDisplay/GeneralContainer/ModpackExportContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/ModpackNameContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 303.0
margin_bottom = 24.0
custom_constants/minimum_spaces = 60
custom_fonts/font = SubResource( 6 )
align = 1
editable = false
placeholder_text = "MODPACK NAME"
placeholder_alpha = 0.4

[node name="Version" type="LineEdit" parent="ModDisplay/GeneralContainer/ModpackExportContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/ModpackNameContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 307.0
margin_right = 382.0
margin_bottom = 24.0
custom_constants/minimum_spaces = 18
custom_fonts/font = SubResource( 5 )
align = 1
editable = false
placeholder_text = "1.0.0"
placeholder_alpha = 0.4

[node name="Website" type="LineEdit" parent="ModDisplay/GeneralContainer/ModpackExportContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/ModpackNameContainer/HBoxContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 382.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 8 )
align = 1
editable = false
placeholder_text = "WEBSITE"
placeholder_alpha = 0.4

[node name="Description" type="LineEdit" parent="ModDisplay/GeneralContainer/ModpackExportContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/ModpackNameContainer/HBoxContainer/VBoxContainer"]
margin_top = 51.0
margin_right = 382.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 8 )
align = 1
editable = false
placeholder_text = "DESCRIPTION"
placeholder_alpha = 0.4

[node name="CenterContainer" type="CenterContainer" parent="ModDisplay/GeneralContainer/ModpackExportContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/ModpackNameContainer/HBoxContainer"]
margin_left = 390.0
margin_right = 439.0
margin_bottom = 70.0

[node name="EditInfo" type="Button" parent="ModDisplay/GeneralContainer/ModpackExportContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/ModpackNameContainer/HBoxContainer/CenterContainer"]
margin_top = 21.0
margin_right = 49.0
margin_bottom = 49.0
text = "EDIT"

[node name="ModsContainer" type="CenterContainer" parent="ModDisplay/GeneralContainer/ModpackExportContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 127.0
margin_right = 944.0
margin_bottom = 327.0

[node name="ScrollContainer" type="ScrollContainer" parent="ModDisplay/GeneralContainer/ModpackExportContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/ModsContainer"]
margin_left = 47.0
margin_right = 897.0
margin_bottom = 200.0
rect_min_size = Vector2( 850, 200 )
scroll_horizontal_enabled = false

[node name="GridContainer" type="GridContainer" parent="ModDisplay/GeneralContainer/ModpackExportContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/ModsContainer/ScrollContainer"]
margin_left = 425.0
margin_right = 425.0
margin_bottom = 200.0
size_flags_horizontal = 6
size_flags_vertical = 7
custom_constants/vseparation = 5
custom_constants/hseparation = 5

[node name="ExportContainer" type="CenterContainer" parent="ModDisplay/GeneralContainer/ModpackExportContainer/VBoxContainer"]
margin_top = 369.0
margin_right = 974.0
margin_bottom = 420.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ModDisplay/GeneralContainer/ModpackExportContainer/VBoxContainer/ExportContainer"]
margin_left = 304.0
margin_right = 670.0
margin_bottom = 51.0

[node name="Label" type="Label" parent="ModDisplay/GeneralContainer/ModpackExportContainer/VBoxContainer/ExportContainer/VBoxContainer"]
margin_right = 366.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 9 )
text = "Currently exporting creates only a manifest.json file."
align = 1

[node name="CenterContainer" type="CenterContainer" parent="ModDisplay/GeneralContainer/ModpackExportContainer/VBoxContainer/ExportContainer/VBoxContainer"]
margin_top = 23.0
margin_right = 366.0
margin_bottom = 51.0

[node name="HBoxContainer" type="HBoxContainer" parent="ModDisplay/GeneralContainer/ModpackExportContainer/VBoxContainer/ExportContainer/VBoxContainer/CenterContainer"]
margin_left = 143.0
margin_right = 222.0
margin_bottom = 28.0

[node name="ExportButton" type="Button" parent="ModDisplay/GeneralContainer/ModpackExportContainer/VBoxContainer/ExportContainer/VBoxContainer/CenterContainer/HBoxContainer"]
margin_right = 79.0
margin_bottom = 28.0
text = "EXPORT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfirmDialog" type="ConfirmationDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -203.5
margin_top = -135.5
margin_right = 203.5
margin_bottom = 135.5
rect_min_size = Vector2( 300, 200 )
window_title = "Editing Modpack Info"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ConfirmDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -44.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ConfirmDialog/VBoxContainer"]
margin_right = 391.0
margin_bottom = 19.0
text = "MODPACK NAME"
align = 1
uppercase = true

[node name="ModpackNameEdit" type="LineEdit" parent="ConfirmDialog/VBoxContainer"]
margin_top = 23.0
margin_right = 391.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 7 )
align = 1
placeholder_text = "..."
caret_blink = true

[node name="Label2" type="Label" parent="ConfirmDialog/VBoxContainer"]
margin_top = 46.0
margin_right = 391.0
margin_bottom = 65.0
text = "Website"
align = 1
uppercase = true

[node name="WebsiteEdit" type="LineEdit" parent="ConfirmDialog/VBoxContainer"]
margin_top = 69.0
margin_right = 391.0
margin_bottom = 88.0
custom_fonts/font = SubResource( 7 )
align = 1
placeholder_text = "..."
caret_blink = true

[node name="Label3" type="Label" parent="ConfirmDialog/VBoxContainer"]
margin_top = 92.0
margin_right = 391.0
margin_bottom = 111.0
text = "DESCRIPTION  (256 characters)"
align = 1

[node name="DescriptionEdit" type="TextEdit" parent="ConfirmDialog/VBoxContainer"]
margin_top = 115.0
margin_right = 391.0
margin_bottom = 163.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 7 )
highlight_current_line = true
wrap_enabled = true
caret_blink = true

[node name="Label4" type="Label" parent="ConfirmDialog/VBoxContainer"]
margin_top = 167.0
margin_right = 391.0
margin_bottom = 186.0
text = "VERSION"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="ConfirmDialog/VBoxContainer"]
margin_top = 190.0
margin_right = 391.0
margin_bottom = 219.0
alignment = 1

[node name="MajorEdit" type="SpinBox" parent="ConfirmDialog/VBoxContainer/HBoxContainer"]
margin_left = 55.0
margin_right = 146.0
margin_bottom = 29.0

[node name="MinorEdit" type="SpinBox" parent="ConfirmDialog/VBoxContainer/HBoxContainer"]
margin_left = 150.0
margin_right = 241.0
margin_bottom = 29.0

[node name="PatchEdit" type="SpinBox" parent="ConfirmDialog/VBoxContainer/HBoxContainer"]
margin_left = 245.0
margin_right = 336.0
margin_bottom = 29.0

[node name="FileDialog" type="FileDialog" parent="."]
margin_left = 106.0
margin_top = 115.0
margin_right = 925.0
margin_bottom = 540.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="request_completed" from="SceneManager/HTTPRequest" to="SceneManager" method="_on_HTTPRequest_request_completed"]
[connection signal="resized" from="ModDisplay" to="SceneManager" method="_on_ModDisplay_resized"]
[connection signal="text_changed" from="ModDisplay/GeneralContainer/ProfileCodeContainer/VBoxContainer/CodeInput" to="SceneManager" method="_on_CodeInput_text_changed"]
[connection signal="text_entered" from="ModDisplay/GeneralContainer/ProfileCodeContainer/VBoxContainer/CodeInput" to="SceneManager" method="_on_CodeInput_text_entered"]
[connection signal="pressed" from="ModDisplay/GeneralContainer/ProfileCodeContainer/CenterContainer/Confirm" to="SceneManager" method="_on_Confirm_pressed"]
[connection signal="pressed" from="ModDisplay/GeneralContainer/ProfileCodeContainer/CenterContainer/Change" to="SceneManager" method="_on_Change_pressed"]
[connection signal="pressed" from="ModDisplay/GeneralContainer/ModpackExportContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/ModpackNameContainer/HBoxContainer/CenterContainer/EditInfo" to="SceneManager" method="_on_EditInfo_pressed"]
[connection signal="pressed" from="ModDisplay/GeneralContainer/ModpackExportContainer/VBoxContainer/ExportContainer/VBoxContainer/CenterContainer/HBoxContainer/ExportButton" to="SceneManager" method="_on_ExportButton_pressed"]
[connection signal="confirmed" from="ConfirmDialog" to="SceneManager" method="_on_ConfirmDialog_confirmed"]
[connection signal="text_changed" from="ConfirmDialog/VBoxContainer/DescriptionEdit" to="SceneManager" method="_on_Description_text_changed"]
